objects/WRFPrintView__mdt.object
<CustomObject>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTypeFields__c</fullName>
        <inlineHelpText>This is used to wipe off the request type-related fields, whenever unselect the request type and we used separator is colon (:), due to csv is not allowed coma (,)</inlineHelpText>
        <label>Request Type Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WRFPrintView</label>
    <listViews>
        <fullName>AfterMarket</fullName>
        <columns>RecordType__c</columns>
        <columns>RequestType__c</columns>
        <columns>RequestTypeFields__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>AfterMarket</value>
        </filters>
        <label>AfterMarket</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>RecordType__c</columns>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>RequestType__c</columns>
        <columns>RequestTypeFields__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PAS</fullName>
        <columns>RecordType__c</columns>
        <columns>RequestType__c</columns>
        <columns>RequestTypeFields__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>PAS</value>
        </filters>
        <label>PAS</label>
    </listViews>
    <listViews>
        <fullName>Planning_solution</fullName>
        <columns>MasterLabel</columns>
        <columns>RecordType__c</columns>
        <columns>RequestType__c</columns>
        <columns>RequestTypeFields__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>contains</operation>
            <value>Planning</value>
        </filters>
        <label>Planning solution</label>
    </listViews>
    <listViews>
        <fullName>Recall</fullName>
        <columns>RecordType__c</columns>
        <columns>RequestType__c</columns>
        <columns>RequestTypeFields__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>equals</operation>
            <value>Recall</value>
        </filters>
        <label>Recall</label>
    </listViews>
    <listViews>
        <fullName>VinSolutions</fullName>
        <columns>MasterLabel</columns>
        <columns>RecordType__c</columns>
        <columns>RequestType__c</columns>
        <columns>RequestTypeFields__c</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType__c</field>
            <operation>contains</operation>
            <value>VINSolutions</value>
        </filters>
        <label>Vin Solutions</label>
    </listViews>
    <pluralLabel>WRFPrintView</pluralLabel>
</CustomObject>